# hl2sdk-cmake

./: .gitignore  CMakeLists.txt  flake.nix  meson.build
fgdlib/: CMakeLists.txt  gamedata.cpp  gdvar.cpp  inputoutput.cpp  wckeyvalues.cpp
mathlib/: CMakeLists.txt
public/: const.h  eiface.h
public/fgdlib/: gamedata.h  wckeyvalues.h
public/tier0/: threadtools.h  vprof_telemetry.h
public/tier1/: datamanager.h  utlmemory.h  utlvector.h
tier1/: CMakeLists.txt  meson.build
